[package]
name = "dep2j"
description = "A command-line tool for converting dependency files to JSON."
readme = "README.rst"
license = "GPL-2.0"
homepage = ""
repository = "https://www.github.com/stuessl/dep2j"
keywords = ["command-line", "dependency", "json"]
categories = ["commandline-tools", "development-tools"]
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false
strip = "symbols"

[features]

